Refactor MongoDB connection, update login button action, and add login page structure with styles

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <section class="hero-section">
                 <div class="hero-content">
                     <h1 class="hero-title">Hệ thống học trực tuyến Đại học Thương mại</h1>
-                    <button class="start-btn" id="startBtn">Bắt đầu ngay</button>
+                    <button class="start-btn" id="startBtn" onclick="location.href='login2.html'">Bắt đầu ngay</button>
                 </div>
                 <div class="wave-separator"></div>
             </section>
