Your commit message

--- a/index.html
+++ b/index.html
@@ -124,5 +124,6 @@
                 <p>Copyright © 2022 TMU. All Rights Reserved.</p>
             </div>
         </footer>
+        <script src="login.js"></script>
     </body>
     </html>
