--- a/main.html
+++ b/main.html
@@ -303,7 +303,8 @@
         </div>
     </div>
     <footer style="text-align: center; padding: 10px; color: #777; font-size: 12px; border-top: 1px solid #ddd; margin-top: 20px;">
-        https://lms.tmu.edu.vn
+        Copyright © 2022 TMU. All Rights Reserved.
     </footer>
 </body>
 </html>
+
