--- a/TKKH.html
+++ b/TKKH.html
@@ -265,7 +265,7 @@
                 </div>
                 Tìm kiếm khóa học
             </div>
-            <div>1287 | Lê Viết Hà ▼</div>
+            <div>1287 | Lê VIỆT Hà ▼</div>
         </div>
         
         <div class="search-container">
