--- a/baocao.html
+++ b/baocao.html
@@ -286,7 +286,7 @@
                 </div>
                 Xuất báo cáo
             </div>
-            <div>1287 | Lê Viết Hà ▼</div>
+            <div>1287 | Lê VIỆT Hà ▼</div>
         </div>
         
         <div class="info-row">
