--- a/giangvien.html
+++ b/giangvien.html
@@ -316,7 +316,7 @@
                 </div>
                 Nhập điểm quá trình
             </div>
-            <div>1287 | Lê VIỆT Hà ▼</div>
+            <div>1287 | Lê Việt Hà ▼</div>
         </div>
         
         <div class="info-row">
