Cập nhật file csdl score.sql, chức năng tìm kiếm khoá học, tìm kiếm sinh viên, xuất báo cáo, nhập điểm, đăng nhập. Xem lại chức năng quên mật khẩu

--- a/forgotps.html
+++ b/forgotps.html
@@ -15,7 +15,7 @@
         <div class="container header-container">
             <div class="logo-container">
                 <a href="index.html">
-                    <img src="logo tmu backgorund.png" alt="TMU Logo" class="logo">
+                    <img src="Assets/logo tmu backgorund.png" alt="TMU Logo" class="logo">
                 </a>
             </div>
             <div class="header-right">
